--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
-    "build": "npm i"
+    "build": "npm install"
   },
   "keywords": [],
   "author": "",
@@ -16,8 +16,5 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "uuid": "^9.0.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.22"
   }
 }
